--- a/ocr-test-llm.html
+++ b/ocr-test-llm.html
@@ -19,12 +19,15 @@
         #preview { max-width: 100%; border-radius: 8px; margin-top: 15px; display: none; }
         .btn { width: 100%; padding: 15px; background: #4ecca3; color: #1a1a2e; border: none; border-radius: 8px; font-size: 16px; font-weight: bold; cursor: pointer; margin-bottom: 15px; }
         .btn:disabled { background: #555; color: #888; cursor: not-allowed; }
-        .result-box { background: #2d2d44; border-radius: 12px; padding: 20px; }
+        .result-box { background: #2d2d44; border-radius: 12px; padding: 20px; margin-bottom: 15px; }
         .result-title { font-size: 14px; color: #888; margin-bottom: 10px; }
-        #result { font-family: Consolas, monospace; font-size: 14px; line-height: 1.6; white-space: pre-wrap; word-break: break-all; min-height: 100px; color: #4ecca3; }
+        .serial-result { font-family: Consolas, monospace; font-size: 24px; color: #4ecca3; text-align: center; padding: 20px; background: #1a1a2e; border-radius: 8px; }
+        .raw-result { font-family: Consolas, monospace; font-size: 12px; line-height: 1.6; white-space: pre-wrap; word-break: break-all; color: #888; max-height: 200px; overflow-y: auto; }
         #status { text-align: center; color: #ffd93d; margin-bottom: 15px; }
         .time { font-size: 12px; color: #888; margin-top: 10px; }
         .note { font-size: 11px; color: #888; }
+        .toggle-btn { float: right; font-size: 11px; background: #3d3d5c; border: none; color: #888; padding: 2px 8px; border-radius: 4px; cursor: pointer; }
+        .size-info { font-size: 11px; color: #4ecca3; margin-top: 5px; }
     </style>
 </head>
 <body>
@@ -46,6 +49,7 @@
         <label class="upload-area" for="fileInput">
             <div>Click or Drag Image</div>
             <img id="preview" alt="preview">
+            <div class="size-info" id="sizeInfo"></div>
         </label>
         <input type="file" id="fileInput" accept="image/*" capture="environment">
 
@@ -53,9 +57,17 @@
         <button class="btn" id="scanBtn" disabled>Scan OCR</button>
 
         <div class="result-box">
-            <div class="result-title">Result</div>
-            <div id="result">Waiting...</div>
+            <div class="result-title">Serial Number</div>
+            <div class="serial-result" id="serial">-</div>
             <div class="time" id="time"></div>
+        </div>
+
+        <div class="result-box">
+            <div class="result-title">
+                Raw Response
+                <button class="toggle-btn" onclick="toggleRaw()">Show/Hide</button>
+            </div>
+            <div class="raw-result" id="rawResult" style="display:none;">Waiting...</div>
         </div>
     </div>
 
@@ -63,14 +75,63 @@
         const fileInput = document.getElementById('fileInput');
         const preview = document.getElementById('preview');
         const scanBtn = document.getElementById('scanBtn');
-        const result = document.getElementById('result');
+        const serialEl = document.getElementById('serial');
+        const rawResultEl = document.getElementById('rawResult');
         const status = document.getElementById('status');
         const timeEl = document.getElementById('time');
         const apiKeyInput = document.getElementById('apiKey');
         const providerSelect = document.getElementById('provider');
+        const sizeInfo = document.getElementById('sizeInfo');
 
         let imageBase64 = null;
         let mediaType = 'image/jpeg';
+
+        function toggleRaw() {
+            rawResultEl.style.display = rawResultEl.style.display === 'none' ? 'block' : 'none';
+        }
+
+        // 이미지 리사이즈 함수
+        function resizeImage(file, maxWidth = 1280) {
+            return new Promise((resolve) => {
+                const reader = new FileReader();
+                reader.onload = (e) => {
+                    const img = new Image();
+                    img.onload = () => {
+                        const canvas = document.createElement('canvas');
+                        let width = img.width;
+                        let height = img.height;
+
+                        if (width > maxWidth) {
+                            height = Math.round((height * maxWidth) / width);
+                            width = maxWidth;
+                        }
+
+                        canvas.width = width;
+                        canvas.height = height;
+
+                        const ctx = canvas.getContext('2d');
+                        ctx.drawImage(img, 0, 0, width, height);
+
+                        const resizedDataUrl = canvas.toDataURL('image/jpeg', 0.8);
+                        const base64 = resizedDataUrl.split(',')[1];
+
+                        const originalSize = (file.size / 1024).toFixed(1);
+                        const newSize = (base64.length * 0.75 / 1024).toFixed(1);
+
+                        resolve({
+                            dataUrl: resizedDataUrl,
+                            base64: base64,
+                            originalSize: originalSize,
+                            newSize: newSize,
+                            width: width,
+                            height: height
+                        });
+                    };
+                    img.src = e.target.result;
+                };
+                reader.readAsDataURL(file);
+            });
+        }
 
         // Load saved settings
         providerSelect.value = localStorage.getItem('llm_provider') || 'anthropic';
@@ -85,24 +146,27 @@
             localStorage.setItem(`${providerSelect.value}_api_key`, apiKeyInput.value);
         });
 
-        fileInput.addEventListener('change', (e) => {
+        fileInput.addEventListener('change', async (e) => {
             const file = e.target.files[0];
             if (!file) return;
 
-            mediaType = file.type || 'image/jpeg';
+            status.textContent = 'Resizing image...';
+            mediaType = 'image/jpeg';
 
-            const reader = new FileReader();
-            reader.onload = (e) => {
-                const dataUrl = e.target.result;
-                imageBase64 = dataUrl.split(',')[1];
-                preview.src = dataUrl;
-                preview.style.display = 'block';
-                scanBtn.disabled = false;
-                result.textContent = 'Ready to scan...';
-                status.textContent = '';
-                timeEl.textContent = '';
-            };
-            reader.readAsDataURL(file);
+            const resized = await resizeImage(file, 1280);
+
+            imageBase64 = resized.base64;
+            preview.src = resized.dataUrl;
+            preview.style.display = 'block';
+            sizeInfo.textContent = `${resized.originalSize}KB → ${resized.newSize}KB (${resized.width}x${resized.height})`;
+            scanBtn.disabled = false;
+            serialEl.textContent = '-';
+            rawResultEl.textContent = 'Ready to scan...';
+            status.textContent = '';
+            timeEl.textContent = '';
+
+            // 자동 스캔 시작
+            setTimeout(() => scanBtn.click(), 100);
         });
 
         async function callClaude(apiKey, base64, type) {
@@ -130,7 +194,7 @@
                             },
                             {
                                 type: 'text',
-                                text: 'Extract ALL text from this image. Return ONLY the extracted text, nothing else. If there is a serial number or product code, make sure to capture it accurately.'
+                                text: 'Extract the serial number (S/N) from this image. Return ONLY the serial number, nothing else. If there are multiple serial numbers, return the main product serial number.'
                             }
                         ]
                     }]
@@ -163,7 +227,7 @@
                             },
                             {
                                 type: 'text',
-                                text: 'Extract ALL text from this image. Return ONLY the extracted text, nothing else. If there is a serial number or product code, make sure to capture it accurately.'
+                                text: 'Extract the serial number (S/N) from this image. Return ONLY the serial number, nothing else. If there are multiple serial numbers, return the main product serial number.'
                             }
                         ]
                     }]
@@ -187,7 +251,8 @@
 
             scanBtn.disabled = true;
             status.textContent = `Calling ${provider === 'anthropic' ? 'Claude' : 'GPT-4'} API...`;
-            result.textContent = '';
+            serialEl.textContent = '...';
+            rawResultEl.textContent = '';
             const startTime = Date.now();
 
             try {
@@ -199,12 +264,17 @@
                 }
 
                 const elapsed = ((Date.now() - startTime) / 1000).toFixed(2);
-                result.textContent = text || '(No text detected)';
+
+                // LLM은 시리얼만 반환하도록 프롬프트 했으므로 그대로 사용
+                const serial = text.trim().replace(/[^A-Z0-9\-]/gi, '');
+                serialEl.textContent = serial || '(Not found)';
+                rawResultEl.textContent = text || '(No response)';
                 status.textContent = 'Done!';
                 timeEl.textContent = `Time: ${elapsed}s`;
 
             } catch (err) {
-                result.textContent = 'Error: ' + err.message;
+                serialEl.textContent = 'Error';
+                rawResultEl.textContent = 'Error: ' + err.message;
                 status.textContent = 'Failed';
             }
 
