--- a/ocr-test-azure.html
+++ b/ocr-test-azure.html
@@ -16,7 +16,10 @@
         .upload-area { background: #2d2d44; border: 2px dashed #4ecca3; border-radius: 12px; padding: 40px; text-align: center; margin-bottom: 20px; cursor: pointer; }
         .upload-area:hover { background: #3d3d5c; }
         input[type="file"] { display: none; }
-        #preview { max-width: 100%; max-height: 120px; object-fit: contain; border-radius: 8px; margin-top: 10px; display: none; cursor: pointer; }
+        .preview-area { background: #2d2d44; border-radius: 12px; padding: 15px; margin-bottom: 20px; display: flex; align-items: center; gap: 15px; }
+        #preview { max-width: 120px; max-height: 100px; object-fit: contain; border-radius: 8px; cursor: pointer; flex-shrink: 0; }
+        .retake-btn { padding: 8px 16px; background: #3d3d5c; color: #fff; border: none; border-radius: 6px; cursor: pointer; font-size: 12px; }
+        .retake-btn:hover { background: #4d4d6c; }
         .modal { display: none; position: fixed; top: 0; left: 0; width: 100%; height: 100%; background: rgba(0,0,0,0.95); z-index: 1000; justify-content: center; align-items: center; flex-direction: column; }
         .modal img { max-width: 95%; max-height: 85%; object-fit: contain; }
         .modal-close { position: absolute; top: 15px; right: 20px; color: #fff; font-size: 32px; cursor: pointer; z-index: 1001; }
@@ -46,12 +49,16 @@
             <div class="note">* Get from Azure Portal > Computer Vision > Keys and Endpoint</div>
         </div>
 
-        <label class="upload-area" for="fileInput">
+        <label class="upload-area" for="fileInput" id="uploadArea">
             <div>Click or Drag Image</div>
-            <img id="preview" alt="preview">
-            <div class="size-info" id="sizeInfo"></div>
         </label>
         <input type="file" id="fileInput" accept="image/*" capture="environment">
+
+        <div class="preview-area" id="previewArea" style="display:none;">
+            <img id="preview" alt="preview">
+            <div class="size-info" id="sizeInfo"></div>
+            <button class="retake-btn" onclick="document.getElementById('fileInput').click()">Retake</button>
+        </div>
 
         <div id="status"></div>
         <button class="btn" id="scanBtn" disabled>Scan OCR</button>
@@ -225,6 +232,9 @@
             localStorage.setItem('azure_vision_endpoint', endpointInput.value);
         });
 
+        const uploadArea = document.getElementById('uploadArea');
+        const previewArea = document.getElementById('previewArea');
+
         fileInput.addEventListener('change', async (e) => {
             const file = e.target.files[0];
             if (!file) return;
@@ -235,7 +245,8 @@
 
             imageBlob = resized.blob;
             preview.src = resized.dataUrl;
-            preview.style.display = 'block';
+            uploadArea.style.display = 'none';
+            previewArea.style.display = 'flex';
             sizeInfo.textContent = `${resized.originalSize}KB → ${resized.newSize}KB (${resized.width}x${resized.height})`;
             scanBtn.disabled = false;
             serialEl.textContent = '-';
