--- a/index.html
+++ b/index.html
@@ -90,6 +90,36 @@
                 <span class="tag">Smart</span>
             </div>
         </a>
+
+        <a href="ocr-test-hybrid.html" class="card" style="border: 2px solid #f59e0b;">
+            <div class="card-header">
+                <span class="card-badge" style="background:#f59e0b;">Hybrid</span>
+                <span class="card-title">QR + Barcode + OCR</span>
+            </div>
+            <div class="card-desc">
+                Smart detection: QR code first, then barcode, then OCR fallback. Best for mixed scenarios.
+            </div>
+            <div class="card-tags">
+                <span class="tag paid">Paid</span>
+                <span class="tag">Google API</span>
+                <span class="tag" style="color:#f59e0b;">Recommended</span>
+            </div>
+        </a>
+
+        <a href="test-labels.html" class="card" style="border: 2px dashed #888;">
+            <div class="card-header">
+                <span class="card-badge" style="background:#888;">Test</span>
+                <span class="card-title">Test Labels (Print)</span>
+            </div>
+            <div class="card-desc">
+                Print test labels to verify hybrid scanner's validation feature.
+            </div>
+            <div class="card-tags">
+                <span class="tag free">Free</span>
+                <span class="tag">Print</span>
+                <span class="tag">4 Labels</span>
+            </div>
+        </a>
     </div>
 </body>
 </html>
