--- a/ocr-test-hybrid.html
+++ b/ocr-test-hybrid.html
@@ -136,8 +136,8 @@
 
         preview.addEventListener('click', () => openModal(preview.src));
 
-        // 이미지 리사이즈 함수
-        function resizeImage(file, maxWidth = 1280) {
+        // 이미지 리사이즈 함수 (QR/바코드 인식을 위해 고품질 유지)
+        function resizeImage(file, maxWidth = 1600) {
             return new Promise((resolve) => {
                 const reader = new FileReader();
                 reader.onload = (e) => {
@@ -156,9 +156,12 @@
                         canvas.height = height;
 
                         const ctx = canvas.getContext('2d');
+                        // 이미지 스무딩 끄기 (바코드/QR 선명도 유지)
+                        ctx.imageSmoothingEnabled = false;
                         ctx.drawImage(img, 0, 0, width, height);
 
-                        const resizedDataUrl = canvas.toDataURL('image/jpeg', 0.8);
+                        // PNG로 저장 (무손실, 바코드/QR에 좋음)
+                        const resizedDataUrl = canvas.toDataURL('image/png');
                         const base64 = resizedDataUrl.split(',')[1];
 
                         const originalSize = (file.size / 1024).toFixed(1);
