--- a/ocr-test-hybrid.html
+++ b/ocr-test-hybrid.html
@@ -295,7 +295,7 @@
             const startTime = Date.now();
 
             try {
-                // Google Vision API - 바코드 + OCR 동시 요청
+                // Google Vision API - QR/바코드만 요청 (테스트용)
                 const response = await fetch(`https://vision.googleapis.com/v1/images:annotate?key=${apiKey}`, {
                     method: 'POST',
                     headers: { 'Content-Type': 'application/json' },
@@ -303,8 +303,7 @@
                         requests: [{
                             image: { content: imageBase64 },
                             features: [
-                                { type: 'BARCODE_DETECTION' },
-                                { type: 'TEXT_DETECTION' }
+                                { type: 'BARCODE_DETECTION' }
                             ]
                         }]
                     })
@@ -320,108 +319,36 @@
                 const result = data.responses[0];
                 let details = [];
 
-                // 각 소스별 결과 저장
+                // QR 코드만 확인 (테스트용)
                 let qrValue = null;
-                let barcodeValue = null;
-                let barcodeFormat = null;
-                let ocrValue = null;
 
-                // 1. 바코드 확인
                 if (result.barcodeAnnotations && result.barcodeAnnotations.length > 0) {
                     for (const barcode of result.barcodeAnnotations) {
-                        if (barcode.format === 'QR_CODE') {
+                        details.push(`[${barcode.format}] ${barcode.rawValue}`);
+                        if (barcode.format === 'QR_CODE' && !qrValue) {
                             qrValue = barcode.rawValue;
-                            details.push(`[QR Code] ${barcode.rawValue}`);
-                        } else if (!barcodeValue) {
-                            barcodeValue = barcode.rawValue;
-                            barcodeFormat = barcode.format;
-                            details.push(`[${barcode.format}] ${barcode.rawValue}`);
                         }
                     }
                 }
 
-                // 2. OCR 텍스트에서 시리얼 추출
-                const textAnnotations = result.textAnnotations;
-                if (textAnnotations && textAnnotations.length > 0) {
-                    const ocrText = textAnnotations[0].description;
-                    details.push('\n--- OCR Text ---\n' + ocrText);
-                    ocrValue = extractSerial(ocrText);
-                }
-
-                // 모든 소스 결과를 항상 표시
-                let html = '';
-                const values = [];
-
-                // QR
+                // 결과 표시
                 if (qrValue) {
-                    values.push(qrValue.toUpperCase().replace(/[^A-Z0-9]/g, ''));
-                    html += `
+                    serialList.innerHTML = `
                         <div class="serial-item">
                             <span class="serial-value">${qrValue}</span>
                             <span class="method-tag method-qr">QR Code</span>
                         </div>`;
+                    verificationStatus.className = 'verification-status status-verified';
+                    verificationStatus.textContent = '✓ QR 인식 성공';
+                    verificationStatus.style.display = 'block';
                 } else {
-                    html += `
+                    serialList.innerHTML = `
                         <div class="serial-item">
-                            <span class="serial-value no-detect">(미인식)</span>
+                            <span class="serial-value no-detect">(QR 미인식)</span>
                             <span class="method-tag method-qr">QR Code</span>
                         </div>`;
-                }
-
-                // Barcode
-                if (barcodeValue) {
-                    values.push(barcodeValue.toUpperCase().replace(/[^A-Z0-9]/g, ''));
-                    html += `
-                        <div class="serial-item">
-                            <span class="serial-value">${barcodeValue}</span>
-                            <span class="method-tag method-barcode">${barcodeFormat || 'Barcode'}</span>
-                        </div>`;
-                } else {
-                    html += `
-                        <div class="serial-item">
-                            <span class="serial-value no-detect">(미인식)</span>
-                            <span class="method-tag method-barcode">Barcode</span>
-                        </div>`;
-                }
-
-                // OCR
-                if (ocrValue) {
-                    values.push(ocrValue.toUpperCase().replace(/[^A-Z0-9]/g, ''));
-                    html += `
-                        <div class="serial-item">
-                            <span class="serial-value">${ocrValue}</span>
-                            <span class="method-tag method-ocr">OCR</span>
-                        </div>`;
-                } else {
-                    html += `
-                        <div class="serial-item">
-                            <span class="serial-value no-detect">(미인식)</span>
-                            <span class="method-tag method-ocr">OCR</span>
-                        </div>`;
-                }
-
-                serialList.innerHTML = html;
-
-                // 검증 상태 결정
-                const detectedCount = values.length;
-                if (detectedCount === 0) {
-                    verificationStatus.className = 'verification-status status-single';
-                    verificationStatus.textContent = '인식된 값 없음';
-                    verificationStatus.style.display = 'block';
-                } else if (detectedCount === 1) {
-                    verificationStatus.className = 'verification-status status-single';
-                    verificationStatus.textContent = '단일 소스 인식';
-                    verificationStatus.style.display = 'block';
-                } else {
-                    // 2개 이상 인식됨 - 비교
-                    const allMatch = values.every(v => v === values[0]);
-                    if (allMatch) {
-                        verificationStatus.className = 'verification-status status-verified';
-                        verificationStatus.textContent = `✓ 검증완료 (${detectedCount}개 소스 일치)`;
-                    } else {
-                        verificationStatus.className = 'verification-status status-mismatch';
-                        verificationStatus.textContent = `⚠ 값 불일치 - 확인 필요`;
-                    }
+                    verificationStatus.className = 'verification-status status-mismatch';
+                    verificationStatus.textContent = '⚠ QR 인식 실패';
                     verificationStatus.style.display = 'block';
                 }
 
