--- a/ocr-test-hybrid.html
+++ b/ocr-test-hybrid.html
@@ -299,7 +299,7 @@
             const startTime = Date.now();
 
             try {
-                // Google Vision API - QR/바코드만 요청 (테스트용)
+                // Google Vision API - TEXT + BARCODE 둘 다 요청 (테스트용)
                 const response = await fetch(`https://vision.googleapis.com/v1/images:annotate?key=${apiKey}`, {
                     method: 'POST',
                     headers: { 'Content-Type': 'application/json' },
@@ -307,7 +307,8 @@
                         requests: [{
                             image: { content: imageBase64 },
                             features: [
-                                { type: 'BARCODE_DETECTION' }
+                                { type: 'BARCODE_DETECTION' },
+                                { type: 'TEXT_DETECTION' }
                             ]
                         }]
                     })
@@ -324,21 +325,31 @@
                 let details = [];
 
                 // 디버깅: 전체 API 응답 출력
-                details.push('=== API Response ===');
-                details.push(JSON.stringify(result, null, 2));
+                details.push('=== BARCODE ===');
+                if (result.barcodeAnnotations && result.barcodeAnnotations.length > 0) {
+                    for (const b of result.barcodeAnnotations) {
+                        details.push(`[${b.format}] ${b.rawValue}`);
+                    }
+                } else {
+                    details.push('(바코드/QR 없음)');
+                }
+
+                details.push('\n=== TEXT ===');
+                if (result.textAnnotations && result.textAnnotations.length > 0) {
+                    details.push(result.textAnnotations[0].description);
+                } else {
+                    details.push('(텍스트 없음)');
+                }
 
                 // QR 코드만 확인 (테스트용)
                 let qrValue = null;
 
                 if (result.barcodeAnnotations && result.barcodeAnnotations.length > 0) {
                     for (const barcode of result.barcodeAnnotations) {
-                        details.push(`[${barcode.format}] ${barcode.rawValue}`);
                         if (barcode.format === 'QR_CODE' && !qrValue) {
                             qrValue = barcode.rawValue;
                         }
                     }
-                } else {
-                    details.push('barcodeAnnotations: 없음');
                 }
 
                 // 결과 표시
