--- a/index.html
+++ b/index.html
@@ -46,6 +46,21 @@
             </div>
         </a>
 
+        <a href="ocr-test-qrcode.html" class="card">
+            <div class="card-header">
+                <span class="card-badge" style="background:#10b981;">html5-qrcode</span>
+                <span class="card-title">QR/Barcode Scanner</span>
+            </div>
+            <div class="card-desc">
+                Local QR/Barcode scanner. Supports QR, Code128, Code39, EAN, UPC.
+            </div>
+            <div class="card-tags">
+                <span class="tag free">Free</span>
+                <span class="tag">No API Key</span>
+                <span class="tag">Fast</span>
+            </div>
+        </a>
+
         <a href="ocr-test-google.html" class="card">
             <div class="card-header">
                 <span class="card-badge badge-blue">Google Vision</span>
